# segwayrmp_ros2

./: .gitignore  .gitmodules
docker/: docker-compose.yml
service/: segwayrmp_ros2.service
src/segwayrmp_base/: CMakeLists.txt  package.xml
src/segwayrmp_base/include/: comm_ctrl_navigation.hpp  odometry.hpp  odometry_data.hpp
src/segwayrmp_base/include/segwayrmp_base/: robot.hpp  segwayrmp_base_ros.hpp
src/segwayrmp_base/src/: SmartCar.cpp  odometry.cpp  robot.cpp  segwayrmp_base_node.cpp  segwayrmp_base_ros.cpp
src/segwayrmp_bringup/: CMakeLists.txt  package.xml
src/segwayrmp_bringup/launch/: segwayrmp_bringup_launch.py  segwayrmp_gmapping_launch.py  segwayrmp_localization_launch.py  segwayrmp_navigation_launch.py  segwayrmp_navigation_launch_1.py
src/segwayrmp_bringup/maps/: display.yaml  display_clean.pgm  display_room_map.pgm  display_room_map.yaml  display_v1.pgm  display_v1.yaml  office.pgm  office.yaml  office_clean.pgm  store_room.pgm  store_room.yaml  store_room_sim.yaml
src/segwayrmp_bringup/params/: ekf.yaml  nav2_params.yaml
src/segwayrmp_bringup/rviz/: default_view.rviz
src/segwayrmp_description/: CMakeLists.txt  package.xml
src/segwayrmp_description/config/: tricycle_drive_controller.yaml
src/segwayrmp_description/launch/: display.launch.py  gazebo.launch.py  segwayrmp_mapping_launch.py
src/segwayrmp_description/map/: display_room_map.yaml
src/segwayrmp_description/rviz/: default_view.rviz  nav2_view.rviz
src/segwayrmp_description/urdf/: 401pius.urdf  segwayrmp.urdf  segwayrmp.urdf.xacro  segwayrmp_ackerman.gazebo  segwayrmp_gazebo.gazebo  segwayrmp_steering.xacro  segwayrmp_xacro.xacro
src/segwayrmp_description/worlds/: store_room.world
src/segwayrmp_description/worlds/model_editor_models/store_room/: model.config  model.sdf
src/segwayrmp_msg/: CMakeLists.txt  package.xml
src/segwayrmp_msg/srv/: EnableChassisRotation.srv  SetChassisControl.srv
